// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders About page 1`] = `
Array [
  <div
    className="info"
  >
    <h1>
      StudySpots
    </h1>
    <h3>
      Mission
    </h3>
    <div
      className="center"
    >
      <p>
        StudySpots focuses on helping college students explore the areas around their campus while finding less busy places to work. StudySpots aims at helping college students quickly find locations nearby them and locations that meet all of the requirements for their standards to help them quickly get their work done.
      </p>
    </div>
    <h3>
      Discovery
    </h3>
    <div
      className="center"
    >
      <p>
        When creating these connections between different libraries, universities, and coffee shops, we noticed...
      </p>
    </div>
  </div>,
  <div
    className="teamInfo"
  >
    <h1>
      Meet the Team
    </h1>
    <h3>
      Members
    </h3>
    <div />
  </div>,
  <div
    className="techInfo"
  >
    <h1>
      Technology Used
    </h1>
    <h3>
      Tools
    </h3>
    <div
      className="center"
    >
      <table
        className="aboutTable table"
      >
        <tbody>
          <tr>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="react_logo.png"
                  />
                  <a
                    href="https://reactjs.org/"
                  >
                    <div
                      className="card-title h5"
                    >
                      React
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used React to create the overall website UI and design. 
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="react_router_logo.png"
                  />
                  <a
                    href="https://reactrouter.com/en/main"
                  >
                    <div
                      className="card-title h5"
                    >
                      React Router
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used React Router in order to create connections and allow navigation between the different pages.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="react_bootstrap.png"
                  />
                  <a
                    href="https://react-bootstrap.github.io/"
                  >
                    <div
                      className="card-title h5"
                    >
                      React Bootstrap
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used React Bootstrap since it already included some basic components that we could use.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="aws.png"
                  />
                  <a
                    href="https://aws.amazon.com/amplify/"
                  >
                    <div
                      className="card-title h5"
                    >
                      AWS Amplify
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used AWS Amplify to host the website.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="docker.png"
                  />
                  <a
                    href="https://www.docker.com/"
                  >
                    <div
                      className="card-title h5"
                    >
                      Docker
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used Docker to be able to create the environment and all the installations necessary for development.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="gitlab_logo.png"
                  />
                  <a
                    href="https://gitlab.com/"
                  >
                    <div
                      className="card-title h5"
                    >
                      GitLab
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used GitLab for source control, collaboration, and to keep track of issues.
                  </p>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <h3>
      APIs Scraped
    </h3>
    <div
      className="center"
    >
      <table
        className="aboutTable table"
      >
        <tbody>
          <tr>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="gitlab_logo.png"
                  />
                  <a
                    href="https://docs.gitlab.com/ee/api/"
                  >
                    <div
                      className="card-title h5"
                    >
                      GitLab API
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used the GitLab API to fetch information about the number of commits and issues on the repo.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="google_maps.png"
                  />
                  <a
                    href="https://developers.google.com/maps"
                  >
                    <div
                      className="card-title h5"
                    >
                      Google Maps API
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used the Google Maps API to fetch information for each of the library instances.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="yelp_logo.png"
                  />
                  <a
                    href="https://www.yelp.com/developers"
                  >
                    <div
                      className="card-title h5"
                    >
                      Yelp API
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used the Yelp API to display information for each of the coffee shops.
                  </p>
                </div>
              </div>
            </td>
            <td>
              <div
                className="card"
                style={
                  Object {
                    "width": "15rem",
                  }
                }
              >
                <div
                  className="card-body"
                >
                  <img
                    className="card-img-top"
                    src="college_logo.png"
                  />
                  <a
                    href="https://collegescorecard.ed.gov/data/"
                  >
                    <div
                      className="card-title h5"
                    >
                      College Score Card API
                    </div>
                  </a>
                  <p
                    className="card-text"
                  >
                    We used the College Score Card API to display information for each of the university instances.
                  </p>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  <div
    className="project_links"
  >
    <h3>
      Project Links
    </h3>
    <a
      className="btn btn-dark"
      disabled={false}
      href="https://gitlab.com/jakem02/cs373-idb"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      GitLab Project Repository
    </a>
                
    <a
      className="btn btn-dark"
      disabled={false}
      href="https://documenter.getpostman.com/view/23653833/2s83tGoBu1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      Postman API Documentation
    </a>
  </div>,
]
`;

exports[`Renders Coffee Shops page 1`] = `
<div
  className="list"
>
  <h1
    className="pageName"
  >
    Coffee Shops
  </h1>
  <table
    className="table table-striped table-bordered table-hover"
    id="entries"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          City
        </th>
        <th>
          Price
        </th>
        <th>
          Rating
        </th>
        <th>
          Open/Closed
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    className="vstack minBreakpoint-xs"
  >
    <div
      className="model_page_pagination"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <span
            className="page-link"
            disabled={true}
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              ‹
            </span>
            <span
              className="visually-hidden"
            >
              Previous
            </span>
          </span>
        </li>
        <li
          className="page-item active"
        >
          <span
            className="page-link"
            disabled={false}
            onClick={[Function]}
          >
            1
            <span
              className="visually-hidden"
            >
              (current)
            </span>
          </span>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            4
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            5
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-hidden="true"
            >
              …
            </span>
            <span
              className="visually-hidden"
            >
              More
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            105
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            106
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            107
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            108
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            109
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-hidden="true"
            >
              ›
            </span>
            <span
              className="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div>
      Showing 
      0
       items
    </div>
  </div>
</div>
`;

exports[`Renders Libraries page 1`] = `
<div
  className="list"
>
  <h1
    className="pageName"
  >
    Libraries
  </h1>
  <table
    className="table table-striped table-bordered table-hover"
    id="entries"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Location
        </th>
        <th>
          Rating
        </th>
        <th>
          Telephone
        </th>
        <th>
          Status
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    className="vstack minBreakpoint-xs"
  >
    <div
      className="model_page_pagination"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <span
            className="page-link"
            disabled={true}
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              ‹
            </span>
            <span
              className="visually-hidden"
            >
              Previous
            </span>
          </span>
        </li>
        <li
          className="page-item active"
        >
          <span
            className="page-link"
            disabled={false}
            onClick={[Function]}
          >
            1
            <span
              className="visually-hidden"
            >
              (current)
            </span>
          </span>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            4
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            5
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-hidden="true"
            >
              …
            </span>
            <span
              className="visually-hidden"
            >
              More
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            244
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            245
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            246
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            247
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            248
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-hidden="true"
            >
              ›
            </span>
            <span
              className="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div>
      Showing 
      0
       items
    </div>
  </div>
</div>
`;

exports[`Renders Navigation bar 1`] = `
<nav
  className="navbar navbar-expand navbar-dark bg-dark"
>
  <div
    className="container"
  >
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="nav-link"
        data-rr-ui-event-key="/"
        disabled={false}
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="nav-link"
        data-rr-ui-event-key="/CoffeeShops"
        disabled={false}
        href="/CoffeeShops"
        onClick={[Function]}
      >
        Coffee Shops
      </a>
      <a
        className="nav-link"
        data-rr-ui-event-key="/Libraries"
        disabled={false}
        href="/Libraries"
        onClick={[Function]}
      >
        Libraries
      </a>
      <a
        className="nav-link"
        data-rr-ui-event-key="/Universities"
        disabled={false}
        href="/Universities"
        onClick={[Function]}
      >
        Universities
      </a>
      <a
        className="nav-link"
        data-rr-ui-event-key="/About"
        disabled={false}
        href="/About"
        onClick={[Function]}
      >
        About
      </a>
    </div>
  </div>
</nav>
`;

exports[`Renders Pagination Component 1`] = `
<ul
  className="pagination"
>
  <li
    className="page-item disabled"
  >
    <span
      className="page-link"
      disabled={true}
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
      >
        ‹
      </span>
      <span
        className="visually-hidden"
      >
        Previous
      </span>
    </span>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
      >
        …
      </span>
      <span
        className="visually-hidden"
      >
        More
      </span>
    </a>
  </li>
  <li
    className="page-item"
  >
    <a
      className="page-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
      >
        ›
      </span>
      <span
        className="visually-hidden"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Renders Universities page 1`] = `
<div
  className="list"
>
  <h1
    className="pageName"
  >
    Universities
  </h1>
  <table
    className="table table-striped table-bordered table-hover"
    id="entries"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          City
        </th>
        <th>
          Zip
        </th>
        <th>
          Undergraduate Population
        </th>
        <th>
          In State Tuition
        </th>
        <th>
          Out of State Tuition
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    className="vstack minBreakpoint-xs"
  >
    <div
      className="model_page_pagination"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <span
            className="page-link"
            disabled={true}
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              ‹
            </span>
            <span
              className="visually-hidden"
            >
              Previous
            </span>
          </span>
        </li>
        <li
          className="page-item active"
        >
          <span
            className="page-link"
            disabled={false}
            onClick={[Function]}
          >
            1
            <span
              className="visually-hidden"
            >
              (current)
            </span>
          </span>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            4
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            5
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-hidden="true"
            >
              …
            </span>
            <span
              className="visually-hidden"
            >
              More
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            26
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            27
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            28
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            29
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              aria-hidden="true"
            >
              ›
            </span>
            <span
              className="visually-hidden"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div>
      Showing 
      0
       items
    </div>
  </div>
</div>
`;
